Add param worker + debug

--- a/configs/mac.conf
+++ b/configs/mac.conf
@@ -5,6 +5,8 @@ server
 	error_page					404 ./server/htdocs/page_error_404.html;
 	error_page					500 502 503 504 /page_error.html;
 
+	workers						2;
+
 	location /
 	{
 		method					GET;
@@ -63,6 +65,9 @@ server
 # 	server_name					localhost; # Nom du serveur
 # 	error_page					404 ./server/htdocs/page_error_404.html;
 # 	error_page					500 502 503 504 /page_error.html;
+
+#	workers						5;
+
 
 # 	location /
 # 	{
