Patch CGI + Accept-Language + Content-Language

--- a/configs/mac.conf
+++ b/configs/mac.conf
@@ -5,7 +5,7 @@ server
 	error_page					404 ./server/htdocs/page_error_404.html;
 	error_page					500 502 503 504 /page_error.html;
 
-	workers						5;
+	workers						3;
 
 	location /
 	{
@@ -43,10 +43,10 @@ server
 	location /php
 	{
 		method					GET POST;
-		root					./server/php;
+		root					./server/php/;
 		index					index.php;
 		cgi_extension			php;
-		cgi_path				/usr/bin/php;
+		cgi_path				/Applications/MAMP/bin/php/php7.4.2/bin/php-cgi;
 	}
 
 	location /auth
